--- a/libs/tinycrypt/pkg.yml
+++ b/libs/tinycrypt/pkg.yml
@@ -17,31 +17,11 @@
 # under the License.
 #
 
-pkg.name: net/nimble/host
-pkg.description: Host side of the nimble Bluetooth Smart stack.
+pkg.name: libs/tinycrypt
+pkg.description: XXX
 pkg.author: "Apache Mynewt <dev@mynewt.incubator.apache.org>"
 pkg.homepage: "http://mynewt.apache.org/"
 pkg.keywords:
-    - ble
-    - bluetooth
 
-pkg.deps:
-    - sys/log
-    - sys/stats
-    - libs/os
-    - libs/util
-    - libs/mbedtls
-    - net/nimble
-    - libs/tinycrypt
-
-pkg.req_apis:
-    - console
-
-# Satisfy capability dependencies for the self-contained test executable.
-pkg.deps.SELFTEST: libs/console/stub
-pkg.cflags.SELFTEST:
-    - -DPHONY_TRANSPORT=1
-    - -DPHONY_HCI_ACKS=1
-    - -DNIMBLE_OPT_SM=1
-    - -DNIMBLE_OPT_SM_SC=1
-pkg.cflags.TEST: -DBLE_HS_DEBUG
+pkg.cflags:
+    - "-std=c99"
