--- a/apps/bleprph/pkg.yml
+++ b/apps/bleprph/pkg.yml
@@ -25,11 +25,11 @@ pkg.keywords:
 pkg.deps: 
     - libs/os 
     - sys/log
-    #- net/nimble/controller
+    - net/nimble/controller
     - net/nimble/host
     - net/nimble/host/services/mandatory
     - net/nimble/host/store/ram
-    - net/nimble/transport/uart
+    - net/nimble/transport/ram
     - libs/console/full
     - libs/baselibc
     - libs/newtmgr
