--- a/sys/init/pkg.yml
+++ b/sys/init/pkg.yml
@@ -17,29 +17,13 @@
 # under the License.
 #
 
-pkg.name: hw/bsp/nrf52dk
-pkg.type: bsp
-pkg.description: BSP definition for the Nordic nRF52 Development Kit (PCA 10040).
+pkg.name: sys/init
+pkg.description: XXX
 pkg.author: "Apache Mynewt <dev@mynewt.incubator.apache.org>"
 pkg.homepage: "http://mynewt.apache.org/"
 pkg.keywords:
-    - nrf52
-    - nrf52dk
+    - init
 
-pkg.arch: cortex_m4
-pkg.compiler: compiler/arm-none-eabi-m4
-pkg.linkerscript: "nrf52dk.ld"
-pkg.linkerscript.bootloader.OVERWRITE: "boot-nrf52dk.ld"
-pkg.downloadscript: nrf52dk_download.sh
-pkg.debugscript: nrf52dk_debug.sh
-pkg.cflags: -DNRF52 -DBSP_HAS_32768_XTAL -DSPI_MASTER_0_ENABLE
 pkg.deps:
-    - hw/mcu/nordic
-    - hw/mcu/nordic/nrf52xxx
-    - libs/baselibc
-    - drivers/uart/uart_hal
-    - sys/init
-pkg.deps.BLE_DEVICE:
-    - net/nimble/drivers/nrf52
-pkg.features:
-    - ADC_NRF52
+    - libs/os
+    - libs/util
