--- a/libs/boot_serial/test/pkg.yml
+++ b/libs/boot_serial/test/pkg.yml
@@ -15,15 +15,15 @@
 # specific language governing permissions and limitations
 # under the License.
 #
-pkg.name: fs/nffs/test
+pkg.name: libs/boot_serial/test
 pkg.type: unittest
 pkg.description: Simple BLE peripheral application.
 pkg.author: "Apache Mynewt <dev@mynewt.incubator.apache.org>"
 pkg.homepage: "http://mynewt.apache.org/"
 pkg.keywords:
 
-pkg.deps: 
-    - fs/nffs
+pkg.deps:
+    - libs/boot_serial
 
 pkg.deps.SELFTEST:
     - libs/console/stub
