--- a/net/nimble/host/test/pkg.yml
+++ b/net/nimble/host/test/pkg.yml
@@ -30,17 +30,12 @@ pkg.deps.SELFTEST:
     - libs/console/stub
     - net/nimble/transport/ram
 
-pkg.cflags.TEST:
-    # XXX: This should be a syscfg setting.
-    - "-DBLE_HS_DEBUG=1"
-
-pkg.cflags.SELFTEST:
-    # XXX: This should be a syscfg setting.
-    - "-DPHONY_HCI_ACKS=1"
-
 pkg.syscfg_vals.SELFTEST:
-    MSYS_1_BLOCK_COUNT: 100
+    BLE_HS_DEBUG: 1
+    BLE_HS_PHONY_HCI_ACKS: 1
+    BLE_HS_REQUIRE_OS: 0
     BLE_MAX_CONNECTIONS: 8
     BLE_GATT_MAX_PROCS: 16
     BLE_SM: 1
     BLE_SM_SC: 1
+    MSYS_1_BLOCK_COUNT: 100
