--- a/sys/fcb/test/pkg.yml
+++ b/sys/fcb/test/pkg.yml
@@ -15,7 +15,7 @@
 # specific language governing permissions and limitations
 # under the License.
 #
-pkg.name: fs/nffs/test
+pkg.name: sys/fcb/test
 pkg.type: unittest
 pkg.description: Simple BLE peripheral application.
 pkg.author: "Apache Mynewt <dev@mynewt.incubator.apache.org>"
@@ -23,7 +23,7 @@ pkg.homepage: "http://mynewt.apache.org/"
 pkg.keywords:
 
 pkg.deps: 
-    - fs/nffs
+    - sys/fcb
 
 pkg.deps.SELFTEST:
     - libs/console/stub
