--- a/hw/hal/test/pkg.yml
+++ b/hw/hal/test/pkg.yml
@@ -17,7 +17,7 @@
 #
 pkg.name: hw/hal/test
 pkg.type: unittest
-pkg.description: Simple BLE peripheral application.
+pkg.description: "HAL unit tests."
 pkg.author: "Apache Mynewt <dev@mynewt.incubator.apache.org>"
 pkg.homepage: "http://mynewt.apache.org/"
 pkg.keywords:
