--- a/fs/nffs/test/pkg.yml
+++ b/fs/nffs/test/pkg.yml
@@ -17,7 +17,7 @@
 #
 pkg.name: fs/nffs/test
 pkg.type: unittest
-pkg.description: Simple BLE peripheral application.
+pkg.description: "NFFS unit tests."
 pkg.author: "Apache Mynewt <dev@mynewt.incubator.apache.org>"
 pkg.homepage: "http://mynewt.apache.org/"
 pkg.keywords:
