--- a/libs/bootutil/test/pkg.yml
+++ b/libs/bootutil/test/pkg.yml
@@ -17,7 +17,7 @@
 #
 pkg.name: libs/bootutil/test
 pkg.type: unittest
-pkg.description: Simple BLE peripheral application.
+pkg.description: "Bootutil unit tests."
 pkg.author: "Apache Mynewt <dev@mynewt.incubator.apache.org>"
 pkg.homepage: "http://mynewt.apache.org/"
 pkg.keywords:
