--- a/net/nimble/host/test/pkg.yml
+++ b/net/nimble/host/test/pkg.yml
@@ -17,7 +17,7 @@
 #
 pkg.name: net/nimble/host/test
 pkg.type: unittest
-pkg.description: Simple BLE peripheral application.
+pkg.description: "NimBLE host unit tests."
 pkg.author: "Apache Mynewt <dev@mynewt.incubator.apache.org>"
 pkg.homepage: "http://mynewt.apache.org/"
 pkg.keywords:
