--- a/sys/config/test/pkg.yml
+++ b/sys/config/test/pkg.yml
@@ -17,7 +17,7 @@
 #
 pkg.name: sys/config/test
 pkg.type: unittest
-pkg.description: Simple BLE peripheral application.
+pkg.description: "Config unit tests."
 pkg.author: "Apache Mynewt <dev@mynewt.incubator.apache.org>"
 pkg.homepage: "http://mynewt.apache.org/"
 pkg.keywords:
