--- a/sys/mn_socket/test/pkg.yml
+++ b/sys/mn_socket/test/pkg.yml
@@ -17,7 +17,7 @@
 #
 pkg.name: sys/mn_socket/test
 pkg.type: unittest
-pkg.description: Simple BLE peripheral application.
+pkg.description: "Mynewt socket unit tests."
 pkg.author: "Apache Mynewt <dev@mynewt.incubator.apache.org>"
 pkg.homepage: "http://mynewt.apache.org/"
 pkg.keywords:
