--- a/libs/elua/elua_base/pkg.yml
+++ b/libs/elua/elua_base/pkg.yml
@@ -33,9 +33,8 @@ pkg.req_apis:
     - console
 pkg.deps:
     - fs/fs
-pkg.deps.SHELL:
+pkg.deps.ELUA_SHELL:
     - libs/shell
-pkg.cflags.SHELL: -DSHELL_PRESENT
 
 pkg.init_function: lua_init
 pkg.init_stage: 5
@@ -43,5 +42,4 @@ pkg.init_stage: 5
 pkg.syscfg_defs:
     ELUA_SHELL:
         description: 'gaga'
-        type: 'task_priority'
-        value: 'any'
+        value: 1
