--- a/libs/os/pkg.yml
+++ b/libs/os/pkg.yml
@@ -30,13 +30,11 @@ pkg.deps:
 pkg.req_apis:
     - console
 
-pkg.deps.SHELL:
+pkg.deps.OS_SHELL:
     - libs/shell 
-pkg.cflags.SHELL: -DSHELL_PRESENT 
 
-pkg.deps.COREDUMP:
+pkg.deps.OS_COREDUMP:
     - sys/coredump
-pkg.cflags.COREDUMP: -DCOREDUMP_PRESENT
 
 pkg.init_function: os_pkg_init
 pkg.init_stage: 0
@@ -45,6 +43,13 @@ pkg.init_stage: 0
 pkg.deps.SELFTEST: libs/console/stub
 
 pkg.syscfg_defs:
+    OS_SHELL:
+        description: 'gaga'
+        value: 1
+    OS_COREDUMP:
+        description: 'gaga'
+        value: 1
+
     MSYS_1_BLOCK_COUNT:
         description: 'gaga'
         value: 12
