--- a/sys/id/pkg.yml
+++ b/sys/id/pkg.yml
@@ -31,11 +31,15 @@ pkg.deps:
     - libs/os
     - libs/util
     - sys/config
-pkg.deps.SHELL:
+pkg.deps.ID_SHELL:
     - libs/shell
-pkg.req_apis.SHELL:
+pkg.req_apis.ID_SHELL:
     - console
-pkg.cflags.SHELL: -DSHELL_PRESENT
 
 pkg.init_function: id_init
 pkg.init_stage: 5
+
+pkg.syscfg_defs:
+    ID_SHELL:
+        description: 'gaga'
+        value: 1
