--- a/apps/blecent/pkg.yml
+++ b/apps/blecent/pkg.yml
@@ -33,6 +33,6 @@ pkg.deps:
     - libs/console/full
     - libs/baselibc
 
-pkg.cflags:
+pkg.syscfg_vals:
     # DEBUG logging is a bit noisy; use INFO.
-    - "-DLOG_LEVEL=1"
+    LOG_LEVEL: 1
