--- a/apps/boot/pkg.yml
+++ b/apps/boot/pkg.yml
@@ -25,8 +25,6 @@ pkg.homepage: "http://mynewt.apache.org/"
 pkg.keywords:
     - loader
 
-pkg.features: bootloader
-
 pkg.deps:
     - sys/config
     - libs/bootutil
@@ -49,6 +47,9 @@ pkg.syscfg_vals:
     LOG_LEVEL: 255
 
 pkg.syscfg_defs:
+    BOOT_LOADER:
+        description: 'gaga'
+        value: 1
     BOOT_NFFS:
         description: 'gaga'
         value: 1
