--- a/hw/bsp/nrf51dk/pkg.yml
+++ b/hw/bsp/nrf51dk/pkg.yml
@@ -32,12 +32,53 @@ pkg.linkerscript: "nrf51dk.ld"
 pkg.linkerscript.bootloader.OVERWRITE: "boot-nrf51dk.ld"
 pkg.downloadscript: nrf51dk_download.sh
 pkg.debugscript: nrf51dk_debug.sh
-pkg.cflags: -DNRF51 -DBSP_HAS_32768_XTAL
+pkg.cflags: -DNRF51
 pkg.deps:
     - hw/mcu/nordic/nrf51xxx
     - libs/baselibc
-    - drivers/uart/uart_hal
+
 pkg.deps.BLE_DEVICE:
     - net/nimble/drivers/nrf51
-pkg.features:
-    - ADC_NRF51
+
+pkg.deps.ADC_0:
+    - drivers/adc/adc_nrf51
+
+pkg.deps.UART_0:
+    - drivers/uart/uart_hal
+
+pkg.syscfg_defs:
+    BSP_NRF52:
+        description: 'gaga'
+        value: 1
+
+    CLOCK_FREQ:
+        description: 'gaga'
+        value: 1000000
+
+    32768_XTAL:
+        description: 'gaga'
+        value: 1
+
+    ADC_0:
+        description: 'gaga'
+        value:  1
+    ADC_0_RESOLUTION:
+        description: 'gaga'
+        value: 'SAADC_CONFIG_RESOLUTION'
+    ADC_0_OVERSAMPLE:
+        description: 'gaga'
+        value: 'SAADC_CONFIG_OVERSAMPLE'
+    ADC_0_INTERRUPT_PRIORITY:
+        description: 'gaga'
+        value: 'SAADC_CONFIG_IRQ_PRIORITY'
+
+    UART_0:
+        description: 'gaga'
+        value:  1
+
+    SPI_MASTER:
+        description: 'gaga'
+        value:  1
+    SPI_SLAVE:
+        description: 'gaga'
+        value:  0
