--- a/drivers/adc/adc_nrf51/pkg.yml
+++ b/drivers/adc/adc_nrf51/pkg.yml
@@ -24,6 +24,8 @@ pkg.homepage: "http://mynewt.apache.org/"
 pkg.keywords:
 pkg.apis:
     - ADC_HW_IMPL
+pkg.deps:
+   - drivers/adc
 pkg.deps.TEST:
    - hw/hal
    - hw/mcu/nordic
