--- a/hw/bsp/nrf51dk/pkg.yml
+++ b/hw/bsp/nrf51dk/pkg.yml
@@ -32,7 +32,10 @@ pkg.linkerscript: "nrf51dk.ld"
 pkg.linkerscript.bootloader.OVERWRITE: "boot-nrf51dk.ld"
 pkg.downloadscript: nrf51dk_download.sh
 pkg.debugscript: nrf51dk_debug.sh
-pkg.cflags: -DNRF51
+pkg.cflags:
+    # Nordic SDK files require this define.
+    - '-DNRF51'
+
 pkg.deps:
     - hw/mcu/nordic/nrf51xxx
     - libs/baselibc
@@ -47,7 +50,7 @@ pkg.deps.UART_0:
     - drivers/uart/uart_hal
 
 pkg.syscfg_defs:
-    BSP_NRF52:
+    BSP_NRF51:
         description: 'gaga'
         value: 1
 
