--- a/hw/bsp/nrf52dk/pkg.yml
+++ b/hw/bsp/nrf52dk/pkg.yml
@@ -32,7 +32,10 @@ pkg.linkerscript: "nrf52dk.ld"
 pkg.linkerscript.bootloader.OVERWRITE: "boot-nrf52dk.ld"
 pkg.downloadscript: nrf52dk_download.sh
 pkg.debugscript: nrf52dk_debug.sh
-pkg.cflags: -DBSP_HAS_32768_XTAL -DSPI_MASTER_0_ENABLE -DNRF52
+pkg.cflags:
+    # Nordic SDK files require this define.
+    - '-DNRF52'
+
 pkg.deps:
     - hw/mcu/nordic/nrf52xxx
     - libs/baselibc
