--- a/hw/mcu/nordic/pkg.yml
+++ b/hw/mcu/nordic/pkg.yml
@@ -31,7 +31,7 @@ pkg.ign_files.BSP_NRF52:
     - "pstorage*"
     - "sdk_mapped_flags.c"
 
-pkg.ign_files.NRF51:
+pkg.ign_files.BSP_NRF51:
     - "nrf_saadc.c"
     - "nrf_drv_saadc.c"
     - "nrf_drv_comp.c"
