--- a/fs/fs/pkg.yml
+++ b/fs/fs/pkg.yml
@@ -26,10 +26,10 @@ pkg.keywords:
     - filesystem
     - ffs
 
-pkg.deps.FS_SHELL:
+pkg.deps.FS_CLI:
     - libs/shell
 
 pkg.syscfg_defs:
     FS_CLI:
         description: 'gaga'
-        value: 1
+        value: 'MYNEWT_PKG_LIBS_SHELL'
