--- a/libs/wifi_mgmt/pkg.yml
+++ b/libs/wifi_mgmt/pkg.yml
@@ -25,14 +25,13 @@ pkg.keywords:
 pkg.deps:
     - "@apache-mynewt-core/libs/os"
     - "@apache-mynewt-core/libs/util"
-pkg.deps.WIFI_MGMT_SHELL:
+pkg.deps.WIFI_MGMT_CLI:
     - libs/shell
 
 pkg.deps.TEST:
    - libs/testutil
 
 pkg.syscfg_defs:
-    WIFI_MGMT_SHELL:
+    WIFI_MGMT_CLI:
         description: 'gaga'
-        value: 1
-
+        value: 'MYNEWT_PKG_LIBS_SHELL'
