--- a/fs/nffs/pkg.yml
+++ b/fs/nffs/pkg.yml
@@ -42,5 +42,5 @@ pkg.init_stage: 2
 
 pkg.syscfg_defs:
     NFFS_DETECT_FAIL:
-        description: 'gaga'
+        description: 'TBD'
         value: 'NFFS_DETECT_FAIL_FORMAT'
