--- a/libs/imgmgr/pkg.yml
+++ b/libs/imgmgr/pkg.yml
@@ -39,8 +39,8 @@ pkg.init_stage: 5
 
 pkg.syscfg_defs:
     IMGMGR_FS:
-        description: 'gaga'
+        description: 'TBD'
         value: 'MYNEWT_PKG_FS_FS'
     IMGMGR_COREDUMP:
-        description: 'gaga'
+        description: 'TBD'
         value: 'MYNEWT_PKG_SYS_COREDUMP'
