--- a/libs/newtmgr/pkg.yml
+++ b/libs/newtmgr/pkg.yml
@@ -40,9 +40,9 @@ pkg.init_stage: 5
 
 pkg.syscfg_defs:
     NEWTMGR_TASK_PRIO:
-        description: 'gaga'
+        description: 'TBD'
         type: 'task_priority'
         value: 'any'
     NEWTMGR_STACK_SIZE:
-        description: 'gaga'
+        description: 'TBD'
         value: 512
