--- a/sys/reboot/pkg.yml
+++ b/sys/reboot/pkg.yml
@@ -40,8 +40,8 @@ pkg.init_stage: 2
 
 pkg.syscfg_defs:
     REBOOT_LOG_0_TYPE:
-        description: 'gaga'
+        description: 'TBD'
         value:  LOG_TYPE_STORAGE
     REBOOT_LOG_0_ENTRY_COUNT:
-        description: 'gaga'
+        description: 'TBD'
         value:  10
