--- a/libs/crash_test/pkg.yml
+++ b/libs/crash_test/pkg.yml
@@ -33,8 +33,8 @@ pkg.deps.CRASH_TEST_NEWTMGR:
 
 pkg.syscfg_defs:
     CRASH_TEST_CLI:
-        description: 'gaga'
+        description: 'TBD'
         value: 1
     CRASH_TEST_NEWTMGR:
-        description: 'gaga'
+        description: 'TBD'
         value: 1
