--- a/net/nimble/host/pkg.yml
+++ b/net/nimble/host/pkg.yml
@@ -50,13 +50,13 @@ pkg.cflags.TEST: -DBLE_HS_DEBUG
 pkg.syscfg_defs:
     # Debug settings.
     BLE_HS_DEBUG:
-        description: 'gaga'
+        description: 'TBD'
         value: 0
     BLE_HS_PHONY_HCI_ACKS:
-        description: 'gaga'
+        description: 'TBD'
         value: 0
     BLE_HS_REQUIRE_OS:
-        description: 'gaga'
+        description: 'TBD'
         value: 1
 
     # Misc settings.
@@ -66,10 +66,10 @@ pkg.syscfg_defs:
 
     # L2CAP settings.
     BLE_L2CAP_MAX_CHANS:
-        description: 'gaga'
+        description: 'TBD'
         value: '3*MYNEWT_VAL_BLE_MAX_CONNECTIONS'
     BLE_L2CAP_SIG_MAX_PROCS:
-        description: 'gaga'
+        description: 'TBD'
         value: 1
 
     # Security manager settings.
@@ -81,83 +81,83 @@ pkg.syscfg_defs:
         value: 0
 
     BLE_SM_MAX_PROCS:
-        description: 'gaga'
+        description: 'TBD'
         value: 1
     BLE_SM_IO_CAP:
-        description: 'gaga'
+        description: 'TBD'
         value: BLE_HS_IO_NO_INPUT_OUTPUT
     BLE_SM_OOB_DATA_FLAG:
-        description: 'gaga'
+        description: 'TBD'
         value: 0
     BLE_SM_BONDING:
-        description: 'gaga'
+        description: 'TBD'
         value: 0
     BLE_SM_MITM:
-        description: 'gaga'
+        description: 'TBD'
         value: 0
     BLE_SM_KEYPRESS:
-        description: 'gaga'
+        description: 'TBD'
         value: 0
     BLE_SM_OUR_KEY_DIST:
-        description: 'gaga'
+        description: 'TBD'
         value: 0
     BLE_SM_THEIR_KEY_DIST:
-        description: 'gaga'
+        description: 'TBD'
         value: 0
 
     # Supported GATT procedures.  By default:
     #     o Notify and indicate are enabled;
     #     o All other procedures are enabled for centrals.
     BLE_GATT_DISC_ALL_SVCS:
-        description: 'gaga'
+        description: 'TBD'
         value: MYNEWT_VAL_BLE_ROLE_CENTRAL
     BLE_GATT_DISC_SVC_UUID:
-        description: 'gaga'
+        description: 'TBD'
         value: MYNEWT_VAL_BLE_ROLE_CENTRAL
     BLE_GATT_FIND_INC_SVCS:
-        description: 'gaga'
+        description: 'TBD'
         value: MYNEWT_VAL_BLE_ROLE_CENTRAL
     BLE_GATT_DISC_ALL_CHRS:
-        description: 'gaga'
+        description: 'TBD'
         value: MYNEWT_VAL_BLE_ROLE_CENTRAL
     BLE_GATT_DISC_CHR_UUID:
-        description: 'gaga'
+        description: 'TBD'
         value: MYNEWT_VAL_BLE_ROLE_CENTRAL
     BLE_GATT_DISC_ALL_DSCS:
-        description: 'gaga'
+        description: 'TBD'
         value: MYNEWT_VAL_BLE_ROLE_CENTRAL
     BLE_GATT_READ:
-        description: 'gaga'
+        description: 'TBD'
         value: MYNEWT_VAL_BLE_ROLE_CENTRAL
     BLE_GATT_READ_UUID:
-        description: 'gaga'
+        description: 'TBD'
         value: MYNEWT_VAL_BLE_ROLE_CENTRAL
     BLE_GATT_READ_LONG:
-        description: 'gaga'
+        description: 'TBD'
         value: MYNEWT_VAL_BLE_ROLE_CENTRAL
     BLE_GATT_READ_MULT:
-        description: 'gaga'
+        description: 'TBD'
         value: MYNEWT_VAL_BLE_ROLE_CENTRAL
     BLE_GATT_WRITE_NO_RSP:
-        description: 'gaga'
+        description: 'TBD'
         value: MYNEWT_VAL_BLE_ROLE_CENTRAL
     BLE_GATT_SIGNED_WRITE:
-        description: 'gaga'
+        description: 'TBD'
         value: MYNEWT_VAL_BLE_ROLE_CENTRAL
     BLE_GATT_WRITE:
-        description: 'gaga'
+        description: 'TBD'
         value: MYNEWT_VAL_BLE_ROLE_CENTRAL
     BLE_GATT_WRITE_LONG:
-        description: 'gaga'
+        description: 'TBD'
         value: MYNEWT_VAL_BLE_ROLE_CENTRAL
     BLE_GATT_WRITE_RELIABLE:
-        description: 'gaga'
+        description: 'TBD'
         value: MYNEWT_VAL_BLE_ROLE_CENTRAL
     BLE_GATT_NOTIFY:
-        description: 'gaga'
+        description: 'TBD'
         value: 1
     BLE_GATT_INDICATE:
-        description: 'gaga'
+        description: 'TBD'
         value: 1
 
     # GATT options.
@@ -167,51 +167,51 @@ pkg.syscfg_defs:
             GATT Reliable Write procedure.
         value: 4
     BLE_GATT_MAX_PROCS:
-        description: 'gaga'
+        description: 'TBD'
         value: 4
 
     # Supported server ATT commands.
     BLE_ATT_SVR_FIND_INFO:
-        description: 'gaga'
+        description: 'TBD'
         value: 1
     BLE_ATT_SVR_FIND_TYPE:
-        description: 'gaga'
+        description: 'TBD'
         value: 1
     BLE_ATT_SVR_READ_TYPE:
-        description: 'gaga'
+        description: 'TBD'
         value: 1
     BLE_ATT_SVR_READ:
-        description: 'gaga'
+        description: 'TBD'
         value: 1
     BLE_ATT_SVR_READ_BLOB:
-        description: 'gaga'
+        description: 'TBD'
         value: 1
     BLE_ATT_SVR_READ_MULT:
-        description: 'gaga'
+        description: 'TBD'
         value: 1
     BLE_ATT_SVR_READ_GROUP_TYPE:
-        description: 'gaga'
+        description: 'TBD'
         value: 1
     BLE_ATT_SVR_WRITE:
-        description: 'gaga'
+        description: 'TBD'
         value: 1
     BLE_ATT_SVR_WRITE_NO_RSP:
-        description: 'gaga'
+        description: 'TBD'
         value: 1
     BLE_ATT_SVR_SIGNED_WRITE:
-        description: 'gaga'
+        description: 'TBD'
         value: 1
     BLE_ATT_SVR_PREP_WRITE:
-        description: 'gaga'
+        description: 'TBD'
         value: 1
     BLE_ATT_SVR_EXEC_WRITE:
-        description: 'gaga'
+        description: 'TBD'
         value: 1
     BLE_ATT_SVR_NOTIFY:
-        description: 'gaga'
+        description: 'TBD'
         value: 1
     BLE_ATT_SVR_INDICATE:
-        description: 'gaga'
+        description: 'TBD'
         value: 1
 
     # ATT options.
@@ -225,10 +225,10 @@ pkg.syscfg_defs:
 
     # Privacy options.
     BLE_RPA_TIMEOUT:
-        description: 'gaga'
+        description: 'TBD'
         value: 300
 
     # Miscellaneous features.
     BLE_EDDYSTONE:
-        description: 'gaga'
+        description: 'TBD'
         value: 1
