--- a/net/nimble/transport/uart/pkg.yml
+++ b/net/nimble/transport/uart/pkg.yml
@@ -35,32 +35,32 @@ pkg.apis:
 
 pkg.syscfg_defs:
     BLE_HCI_EVT_HI_BUF_COUNT:
-        description: 'gaga'
+        description: 'TBD'
         value:     8
     BLE_HCI_EVT_LO_BUF_COUNT:
-        description: 'gaga'
+        description: 'TBD'
         value:     0
 
     BLE_HCI_UART_BUF_SIZE:
-        description: 'gaga'
+        description: 'TBD'
         value: 260
 
     BLE_HCI_UART_PORT:
-        description: 'gaga'
+        description: 'TBD'
         value:            0
     BLE_HCI_UART_BAUD:
-        description: 'gaga'
+        description: 'TBD'
         value:            1000000
     BLE_HCI_UART_DATA_BITS:
-        description: 'gaga'
+        description: 'TBD'
         value:       8
     BLE_HCI_UART_STOP_BITS:
-        description: 'gaga'
+        description: 'TBD'
         value:       1
     BLE_HCI_UART_PARITY:
-        description: 'gaga'
+        description: 'TBD'
         value:          HAL_UART_PARITY_NONE
     BLE_HCI_UART_FLOW_CTRL:
-        description: 'gaga'
+        description: 'TBD'
         value:       HAL_UART_FLOW_CTL_RTS_CTS
 
