--- a/hw/bsp/nrf51dk/pkg.yml
+++ b/hw/bsp/nrf51dk/pkg.yml
@@ -26,13 +26,6 @@ pkg.keywords:
     - nrf51
     - nrf51dk
 
-pkg.arch: cortex_m0
-pkg.compiler: compiler/arm-none-eabi-m0
-pkg.linkerscript: "nrf51dk.ld"
-pkg.linkerscript.BOOT_LOADER.OVERWRITE: "boot-nrf51dk.ld"
-pkg.part2linkerscript: "split-nrf51dk.ld"
-pkg.downloadscript: nrf51dk_download.sh
-pkg.debugscript: nrf51dk_debug.sh
 pkg.cflags:
     # Nordic SDK files require this define.
     - '-DNRF51'
@@ -40,6 +33,7 @@ pkg.cflags:
 pkg.deps:
     - hw/mcu/nordic/nrf51xxx
     - libc/baselibc
+    - sys/flash_map
 
 pkg.deps.BLE_DEVICE:
     - hw/drivers/nimble/nrf51
