--- a/hw/bsp/nrf52dk/pkg.yml
+++ b/hw/bsp/nrf52dk/pkg.yml
@@ -26,13 +26,6 @@ pkg.keywords:
     - nrf52
     - nrf52dk
 
-pkg.arch: cortex_m4
-pkg.compiler: compiler/arm-none-eabi-m4
-pkg.linkerscript: "nrf52dk.ld"
-pkg.linkerscript.BOOT_LOADER.OVERWRITE: "boot-nrf52dk.ld"
-pkg.part2linkerscript: "split-nrf52dk.ld"
-pkg.downloadscript: nrf52dk_download.sh
-pkg.debugscript: nrf52dk_debug.sh
 pkg.cflags:
     # Nordic SDK files require these defines.
     - '-DNRF52'
@@ -41,6 +34,8 @@ pkg.cflags:
 pkg.deps:
     - hw/mcu/nordic/nrf52xxx
     - libc/baselibc
+    - sys/flash_map
+    - boot/bootutil
 
 pkg.deps.BLE_DEVICE:
     - hw/drivers/nimble/nrf52
