--- a/sys/flash_map/pkg.yml
+++ b/sys/flash_map/pkg.yml
@@ -1,3 +1,4 @@
+#
 # Licensed to the Apache Software Foundation (ASF) under one
 # or more contributor license agreements.  See the NOTICE file
 # distributed with this work for additional information
@@ -15,16 +16,18 @@
 # specific language governing permissions and limitations
 # under the License.
 #
-pkg.name: hw/hal/test
-pkg.type: unittest
-pkg.description: "HAL unit tests."
+
+pkg.name: sys/flash_map
+pkg.description: System utilities required by all BSPs.
 pkg.author: "Apache Mynewt <dev@mynewt.incubator.apache.org>"
 pkg.homepage: "http://mynewt.apache.org/"
 pkg.keywords:
+    - bsp
+    - flash map
 
 pkg.deps:
-    - hw/hal
-    - test/testutil
+    - sys/defs
+    - sys/flash_map
 
-pkg.deps.SELFTEST:
-    - sys/console/stub
+pkg.init_function: flash_map_init
+pkg.init_stage: 0
